# agentic-rag-backend

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/core/: config.py  exceptions.py  logging.py
app/core/db/: engine.py  session.py
app/modules/agent/: memory.py  models.py  policy.py  repository.py  router.py  schemas.py  service.py  tools.py
app/modules/kb/: embedder.py  loader.py  models.py  repository.py  retriever.py  router.py  schemas.py  service.py  splitter.py
app/providers/: base.py  factory.py  gemini.py  openai.py
